apps/halogen-flash/overlays/nishir/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: halogen-flash
  namespace: shikanime
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: halogen-flash
      app.kubernetes.io/name: halogen-flash
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: envoy-gateway-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: envoy
      ports:
        - port: http
